5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4191/executions/1834_1277.log
== TEST (2019-07-01 20:23:45) 
-- CODE:
a=int(input("Cidade a: "))
b=int(input("cidade b: "))

matriz=array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])

a1=a/11-1
b1=b/11-1

posicao=matriz[a,b]
print(posicao)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    matriz=array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 20:25:20) 
-- CODE:
from numpy import *
a=int(input("Cidade a: "))
b=int(input("cidade b: "))

matriz=array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])

a1=a/11-1
b1=b/11-1

posicao=matriz[a,b]
print(posicao)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 20:25:34) 
-- CODE:
from numpy import *
a=int(input("Cidade a: "))
b=int(input("cidade b: "))

matriz=array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])

a1=a/11-1
b1=b/11-1

posicao=matriz[a1,b1]
print(posicao)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 20:28:14) 
-- CODE:
from numpy import *
a=int(input("Cidade a: "))
b=int(input("cidade b: "))

matriz=array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])

a1=a/111-1
b1=b/111-1

posicao=matriz[a1,b1]
print(posicao)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 20:31:35) 
-- CODE:
from numpy import *
a=int(input("Cidade a: "))
b=int(input("cidade b: "))

matriz=array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])

a1=a/111-1
b1=b/111-1


print(matriz[a1,b1])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 20:44:25) 
-- CODE:
from numpy import *
a=int(input("Cidade a: "))
b=int(input("cidade b: "))

matriz=array([[0,2,11,6,15,11,1],[2,0,7,12,4,2,15],[11,7,0,11,8,3,13],[6,12,11,0,10,2,1],[15,4,8,10,0,5,13],[11,2,3,2,5,0,14],[1,15,13,1,13,14,0]])

c=matriz[(a/111)-1,(b/111)-1]

print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 20:44:50) 
-- CODE:
from numpy import *
a=int(input("Cidade a: "))
b=int(input("cidade b: "))

matriz=array([[0,2,11,6,15,11,1],
				  [2,0,7,12,4,2,15],
				  [11,7,0,11,8,3,13],
				  [6,12,11,0,10,2,1],
				  [15,4,8,10,0,5,13],
				  [11,2,3,2,5,0,14],
				  [1,15,13,1,13,14,0]])

c=matriz[(a/111)-1,(b/111)-1]

print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 20:45:15) 
-- CODE:
from numpy import *
a=int(input("Cidade a: "))
b=int(input("cidade b: "))

matriz=array([[0,2,11,6,15,11,1],
				  [2,0,7,12,4,2,15],
				  [11,7,0,11,8,3,13],
				  [6,12,11,0,10,2,1],
				  [15,4,8,10,0,5,13],
				  [11,2,3,2,5,0,14],
				  [1,15,13,1,13,14,0]])

c=matriz[(a//100)-1,(b/100)-1]

print(c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 20:46:05) 
-- CODE:
from numpy import *
from linalg import *
a=int(input("Cidade a: "))
b=int(input("cidade b: "))

matriz=array([[0,2,11,6,15,11,1],
				  [2,0,7,12,4,2,15],
				  [11,7,0,11,8,3,13],
				  [6,12,11,0,10,2,1],
				  [15,4,8,10,0,5,13],
				  [11,2,3,2,5,0,14],
				  [1,15,13,1,13,14,0]])

posicao=matriz[(a/111)-1,(b/111)-1]

print(posicao)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 20:46:23) 
-- CODE:
from numpy import *
from linalg import *
a=int(input("Cidade a: "))
b=int(input("cidade b: "))

matriz=array([[0,2,11,6,15,11,1],
				  [2,0,7,12,4,2,15],
				  [11,7,0,11,8,3,13],
				  [6,12,11,0,10,2,1],
				  [15,4,8,10,0,5,13],
				  [11,2,3,2,5,0,14],
				  [1,15,13,1,13,14,0]])

posicao=matriz[(a/111)-1,(b/111)-1]

print(posicao)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 20:46:35) 
-- CODE:
from numpy import *
from numpy.linalg import *
a=int(input("Cidade a: "))
b=int(input("cidade b: "))

matriz=array([[0,2,11,6,15,11,1],
				  [2,0,7,12,4,2,15],
				  [11,7,0,11,8,3,13],
				  [6,12,11,0,10,2,1],
				  [15,4,8,10,0,5,13],
				  [11,2,3,2,5,0,14],
				  [1,15,13,1,13,14,0]])

posicao=matriz[(a/111)-1,(b/111)-1]

print(posicao)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 20:47:24) 
-- CODE:
from numpy import *
from numpy.linalg import *
a=int(input("Cidade a: "))
b=int(input("cidade b: "))

matriz=array([[0,2,11,6,15,11,1],
				  [2,0,7,12,4,2,15],
				  [11,7,0,11,8,3,13],
				  [6,12,11,0,10,2,1],
				  [15,4,8,10,0,5,13],
				  [11,2,3,2,5,0,14],
				  [1,15,13,1,13,14,0]])

posicao=matriz[(a//100)-1,(b//100)-1]

print(posicao)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 20:47:34) 
-- CODE:
from numpy import *
from numpy.linalg import *
a=int(input("Cidade a: "))
b=int(input("cidade b: "))

matriz=array([[0,2,11,6,15,11,1],
				  [2,0,7,12,4,2,15],
				  [11,7,0,11,8,3,13],
				  [6,12,11,0,10,2,1],
				  [15,4,8,10,0,5,13],
				  [11,2,3,2,5,0,14],
				  [1,15,13,1,13,14,0]])

posicao=matriz[(a//100)-1,(b//100)-1]

print(posicao)
-- EXECUTION TIME:
0.90557
-- TEST CASE 1:
---- input:
777
666
---- correct output:
14
---- user output:
14
-- TEST CASE 2:
---- input:
555
111
---- correct output:
15
---- user output:
15
-- TEST CASE 3:
---- input:
333
777
---- correct output:
13
---- user output:
13
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
